Revert "Fixed text align"
This reverts commit f5d96641a3cfee57aff4eb0ae73661d07f1bcbf4.

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ header {
 .phoneContainer {
     display: flex;
     align-items: center;
+    margin-left: 520px;
     margin-top: 20px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -158,7 +159,7 @@ header {
 .phoneImage {
     width: 4%;
     height: 4%;
-    margin-right: 2%;
+    margin-right: 20px;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -171,7 +172,6 @@ header {
     font-family: "Montserrat", sans-serif;
     cursor: pointer;
     font-size: 20px;
-    text-align: center;
     transition: all 0.3s ease 0s;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -185,6 +185,7 @@ header {
 .backupPhoneContainer {
     display: flex;
     align-items: center;
+    margin-left: 520px;
     margin-top: 20px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -207,7 +208,6 @@ header {
     font-family: "Montserrat", sans-serif;
     cursor: pointer;
     font-size: 20px;
-    text-align: center;
     transition: all 0.3s ease 0s;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -221,6 +221,7 @@ header {
 .emailContainer {
     display: flex;
     align-items: center;
+    margin-left: 460px;
     margin-top: 10px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -243,7 +244,6 @@ header {
     font-size: 20px;
     margin-left: 10px;
     transition: all 0.3s ease 0s;
-    text-align: center;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
